tests/checker/diagnostics/0185_adt_constructor_int_arg_mismatch_06.ml.infer.expected
File "0185_adt_constructor_int_arg_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0185_adt_constructor_int_arg_mismatch_06 is not a valid module name.

File "0185_adt_constructor_int_arg_mismatch_06.ml", line 2, characters 12-16:
2 | let _ = Low true
                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
